--- a/stow/.tmux.conf
+++ b/stow/.tmux.conf
@@ -21,6 +21,16 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Customise Status Bar
-set -g status-bg cyan
-set -g window-status-style bg=white
-set -g window-status-current-style bg=green
+#set -g status-style bg=#ffd7ff,fg=white
+set -g window-status-style bg=#ffd7ff,fg=white
+set -g window-status-current-style bg=white,fg=#ffd7ff
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+
+run -b '~/.tmux/plugins/tpm/tpm'
+
