--- a/stow/.tmux.conf
+++ b/stow/.tmux.conf
@@ -3,6 +3,9 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+set status-utf8 on
+set utf8 on
+
 # Use default terminal to allow formatting
 set -g default-terminal "screen-256color"
 
@@ -21,9 +24,10 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Customise Status Bar
-#set -g status-style bg=#ffd7ff,fg=white
-set -g window-status-style bg=#ffd7ff,fg=white
-set -g window-status-current-style bg=white,fg=#ffd7ff
+set -g status-bg black
+set -g status-fg white
+set -g window-status-style bg=black,fg=white
+set -g window-status-current-style bg=purple
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
