--- a/stow/.tmux.conf
+++ b/stow/.tmux.conf
@@ -3,10 +3,12 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-set status-utf8 on
-set utf8 on
+# set status-utf8 on
+# set utf8 on
 
-# Use default terminal to allow formatting
+# Add truecolor support
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+# Default terminal is 256 colors
 set -g default-terminal "screen-256color"
 
 # reload config
